--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,157 @@
-tensorflow-gpu==2.0.0a0
-opencv-python==4.0.0.21
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=main
+absl-py=0.7.1=pypi_0
+asn1crypto=0.24.0=py37_1003
+astor=0.8.0=pypi_0
+atk=2.32.0=haf93ef1_0
+blas=1.0=openblas
+bzip2=1.0.6=h14c3975_1002
+ca-certificates=2019.5.15=0
+cairo=1.16.0=ha4e643d_1000
+certifi=2019.6.16=py37_0
+cffi=1.12.3=py37h8022711_0
+chardet=3.0.4=py37_1003
+cryptography=2.7=py37h72c5cf5_0
+#cudatoolkit=10.0.130=0
+#cudnn=7.6.0=cuda10.0_0
+cycler=0.10.0=py37_0
+dbus=1.13.6=he372182_0
+decorator=4.4.0=pypi_0
+dlib=19.17.0=pypi_0
+dronekit=2.9.2=pypi_0
+dronekit-sitl=3.3.0=pypi_0
+expat=2.2.5=hf484d3e_1002
+ffmpeg=4.1.3=h167e202_0
+fontconfig=2.13.1=he4413a7_1000
+freetype=2.10.0=he983fc9_0
+future=0.17.1=pypi_0
+gast=0.2.2=pypi_0
+gdk-pixbuf=2.36.12=h7a26e22_1003
+gettext=0.19.8.1=hc5be6a0_1002
+giflib=5.1.9=h516909a_0
+glib=2.58.3=hf63aee3_1001
+gmp=6.1.2=hf484d3e_1000
+gnutls=3.6.5=hd3a4fd2_1002
+gobject-introspection=1.58.2=py37h5503ade_1001
+google-pasta=0.1.7=pypi_0
+gps=3.19=pypi_0
+graphite2=1.3.13=hf484d3e_1000
+grpcio=1.21.1=pypi_0
+gst-plugins-base=1.14.5=h0935bb2_0
+gstreamer=1.14.5=h36ae1b5_0
+gtk2=2.24.31=hb68c50a_1001
+h5py=2.9.0=pypi_0
+harfbuzz=2.4.0=h37c48d4_0
+hdf5=1.10.5=nompi_h3c11f04_1100
+icu=58.2=hf484d3e_1000
+idna=2.8=py37_1000
+imageio=2.5.0=pypi_0
+imgaug=0.2.8=pypi_0
+imutils=0.5.2=pypi_0
+jasper=1.900.1=h07fcdf6_1006
+joblib=0.13.2=pypi_0
+jpeg=9c=h14c3975_1001
+keras-applications=1.0.8=pypi_0
+keras-preprocessing=1.1.0=pypi_0
+kiwisolver=1.1.0=py37he6710b0_0
+lame=3.100=h14c3975_1001
+libblas=3.8.0=7_openblas
+libcblas=3.8.0=7_openblas
+libffi=3.2.1=he1b5a44_1006
+libgcc-ng=8.2.0=hdf63c60_1
+libgfortran-ng=7.3.0=hdf63c60_0
+libglu=9.0.0=hf484d3e_1000
+libiconv=1.15=h516909a_1005
+liblapack=3.8.0=7_openblas
+liblapacke=3.8.0=7_openblas
+libopenblas=0.3.6=h5a2b251_1
+libpng=1.6.37=hed695b0_0
+libstdcxx-ng=8.2.0=hdf63c60_1
+libtiff=4.0.10=h57b8799_1003
+libuuid=2.32.1=h14c3975_1000
+libwebp=1.0.2=h576950b_1
+libxcb=1.13=h14c3975_1002
+libxml2=2.9.9=h13577e0_0
+lxml=4.3.4=pypi_0
+lz4-c=1.8.3=he1b5a44_1001
+markdown=3.1.1=pypi_0
+matplotlib=3.1.0=py37h5429711_0
+mavproxy=1.8.8=pypi_0
+monotonic=1.5=pypi_0
+ncurses=6.1=hf484d3e_1002
+nettle=3.4.1=h1bed415_1002
+networkx=2.3=pypi_0
+nonechucks=0.3.1=pypi_0
+numpy=1.16.4=py37h95a1406_0
+openblas=0.3.5=h9ac9557_1001
+opencv=4.1.0=py37h3aa1047_5
+opencv-python=4.1.0.25=pypi_0
+openh264=1.8.0=hdbcaa40_1000
+openssl=1.1.1c=h7b6447c_1
+pango=1.40.14=he7ab937_1005
+pathlib2=2.3.4=py37_0
+pcre=8.41=hf484d3e_1003
+pillow=6.1.0=pypi_0
+pip=19.1.1=py37_0
+pixman=0.34.0=h14c3975_1003
+protobuf=3.8.0=pypi_0
+psutil=5.6.3=pypi_0
+pthread-stubs=0.4=h14c3975_1001
+pycparser=2.19=py37_1
+pygame=1.9.6=pypi_0
+pymavlink=2.3.7=pypi_0
+pyopenssl=19.0.0=py37_0
+pyparsing=2.4.0=py_0
+pypubsub=4.0.3=py_0
+pyqt=5.9.2=py37h05f1152_2
+pyserial=3.4=pypi_0
+pysocks=1.7.0=py37_0
+python=3.7.3=h5b0a415_0
+python-dateutil=2.8.0=py37_0
+pytz=2019.1=py_0
+pywavelets=1.0.3=pypi_0
+pyzmq=18.0.2=pypi_0
+qt=5.9.7=h52cfd70_2
+readline=7.0=hf8c457e_1001
+requests=2.22.0=py37_1
+scikit-image=0.15.0=pypi_0
+scikit-learn=0.21.3=pypi_0
+scipy=1.2.1=pypi_0
+setuptools=41.0.1=py37_0
+shapely=1.6.4.post2=pypi_0
+sip=4.19.8=py37hf484d3e_0
+six=1.12.0=pypi_0
+sklearn=0.0=pypi_0
+sqlite=3.28.0=h8b20d00_0
+tb-nightly=1.14.0a20190301=pypi_0
+tensorflow-gpu=2.0.0a0=pypi_0
+termcolor=1.1.0=pypi_0
+tf-estimator-nightly=1.14.0.dev2019030115=pypi_0
+tk=8.6.9=hed695b0_1002
+torch=1.0.1.post2=pypi_0
+torchvision=0.2.2=pypi_0
+tornado=6.0.3=py37h7b6447c_0
+tqdm=4.19.9=pypi_0
+urllib3=1.25.3=py37_0
+werkzeug=0.15.4=pypi_0
+wheel=0.33.4=py37_0
+wxpython=4.0.6=py37h812d2d3_0
+x264=1!152.20180806=h14c3975_0
+xorg-kbproto=1.0.7=h14c3975_1002
+xorg-libice=1.0.9=h516909a_1004
+xorg-libsm=1.2.3=h84519dc_1000
+xorg-libx11=1.6.7=h14c3975_1000
+xorg-libxau=1.0.9=h14c3975_0
+xorg-libxdmcp=1.1.3=h516909a_0
+xorg-libxext=1.3.4=h516909a_0
+xorg-libxrender=0.9.10=h516909a_1002
+xorg-renderproto=0.11.1=h14c3975_1002
+xorg-xextproto=7.3.0=h14c3975_1002
+xorg-xproto=7.0.31=h14c3975_1007
+xz=5.2.4=h14c3975_1001
+yaml=0.1.7=had09818_2
+zlib=1.2.11=h14c3975_1004
+zmq=0.0.0=pypi_0
+zstd=1.4.0=h3b9ef0a_0
